# english-focus

./: .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CHECKPOINT.md  CONTRIBUTING.md  DELETE_FILES.txt  PATCH_FILE_LIST.txt  PATCH_MANIFEST.md  PROJECT_STATUS.md  PROJECT_TREE.txt  README.md  README_CP29_FIX01.txt  RELEASE_CHECKLIST.md  SECURITY.md  SKELETON_MANIFEST.json  TEST_PLAN.md  VALIDATION.md  VALIDATION_REPORT.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/schemas/: activity-record.schema.json  app-settings.schema.json  backup-descriptor.schema.json  backup-restore-result.schema.json  backup-validation-result.schema.json  diagnostic-report.schema.json  diagnostic-scan-coverage.schema.json  local-data-snapshot.schema.json  reset-local-data-result.schema.json  safe-maintenance-result.schema.json  unavailable-backup.schema.json  vocabulary-entry.schema.json  vocabulary-user-metadata.schema.json
apps/desktop/src-tauri/src/: contracts.rs  lib.rs  main.rs  validation.rs
apps/desktop/src-tauri/src/commands/: activity.rs  backup.rs  backup_inventory.rs  contract_commands.rs  data_reset.rs  database.rs  diagnostic_coverage.rs  diagnostics.rs  mod.rs  resilient_records.rs  runtime.rs  settings.rs  storage_contract_commands.rs
apps/desktop/src-tauri/src/database/: connection.rs  migrations.rs
(+714 files in other folders)
