[package]
name = "english-learning-platform"
version = "0.0.0"
description = "Local English learning desktop application"
edition = "2021"

[lib]
name = "english_learning_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
