[package]
name = "english-learning-platform"
version = "1.0.0"
description = "Private, local-first English vocabulary learning desktop application"
authors = ["English Focus"]
edition = "2021"

[lib]
name = "english_learning_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
jsonschema = { version = "0.47.0", default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
